# fhirpath-py

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build.yaml  pages.yaml  publish.yaml
demo/: index.html
fhirpathpy/engine/: nodes.py
fhirpathpy/engine/evaluators/: __init__.py
fhirpathpy/engine/invocations/: filtering.py  navigation.py
fhirpathpy/parser/: __init__.py  _antlr.py
fhirpathrs/: __init__.py
fhirpathrs/engine/: __init__.py  util.py
fhirpathrs/engine/evaluators/: __init__.py
fhirpathrs/engine/invocations/: __init__.py  aggregate.py  combining.py  datetime.py  equality.py  existence.py  filtering.py  math.py  misc.py  navigation.py  strings.py  types.py
fhirpathrs/parser/: __init__.py
scripts/: generate_golden_asts.py
src/: lexer.rs  lib.rs  parser.rs  resolve.rs  utf16.rs
src/analyze/: README.md  annotations.rs  completions.rs  mod.rs  questionnaire_index.rs  result_type.rs  validate_context.rs  validate_link_ids.rs  validate_types.rs
src/bindings/: python.rs  wasm.rs
tests/: conftest.py  test_additional.py  test_analyze.py  test_context.py  test_equivalence.py  test_evaluators.py  test_models.py  test_parser.py  test_real.py  test_resolve.py
tests/fixtures/ast/: %v+2.json  Observation.value.json  Patient.name.given.json  a.b+2.json  golden_asts.json
wasm/: fhirpath_wasm.d.ts  package.json
