[package]
name = "fhirpathrs"
version = "2.1.0"
edition = "2021"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
